--- a/src/components/styles/command.css
+++ b/src/components/styles/command.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-ion-searchbar.custom {
-    --box-shadow: 0px;
-    --border-radius: 8px
+[cmdk-list] {
+    height: var(--cmdk-list-height);
+    transition: height 100ms ease;
 }
